# obesity-multi-class-prediction

./: .gitignore  README.md  pyproject.toml
notebooks/: 1_exploratory_data_analysis.ipynb  2_create_folds.ipynb  2_preprocessing.ipynb  3_model_training.ipynb  4_kfolds_cross_validation.ipynb  6_log_first_model_mlfow.ipynb  8_threshold_optimisation.ipynb
src/: create_folds.py  experiment_tracking.py  feature_engineering.py  kfolds_cross_validation.py  model_training_optuna.py  model_training_single.py  preprocessing.py
