[tool.poetry]
name = "obesity-multi-class-prediction"
version = "0.1.0"
description = ""
authors = ["Vince Lam <57117625+vince-lam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
scikit-learn = "^1.5.0"
xgboost = "^2.0.3"
catboost = "^1.2.3"
lightgbm = "^4.3.0"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
optuna = "^3.5.0"
mlflow = "^2.14.2"
mljar-supervised = "^1.1.3"
dabl = "^0.2.6.2"
featuretools = "^1.30.0"
autofeat = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.8.0"
autopep8 = "^2.0.4"
nbqa = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
